--- a/datawinners/media/css/scss/section_application.scss
+++ b/datawinners/media/css/scss/section_application.scss
@@ -24,11 +24,11 @@
   padding-bottom: 30px;
   .content {
     clear: both;
-    min-height: 550px;
+    //min-height: 550px;
     background: #FFFFFF;
     border: 1px solid #cccccc;
     padding: 25px;
-    overflow: auto;
+    //overflow: auto;
     margin: 0 auto;
   }
   .wizard_content {
